openshift/manifests/tomcat-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: tomcat
  namespace: juno
spec:
  replicas: 1
  selector:
    matchLabels:
      name: tomcat
  template:
    metadata:
      labels:
        name: tomcat
    spec:
      restartPolicy: Always
      schedulerName: default-scheduler
      containers:
        - resources:
            limits:
              cpu: '1'
              memory: 2000Mi
            requests:
              cpu: 10m
              memory: 800Mi
          readinessProbe:
            httpGet:
              path: /juno/actuator/health/readiness
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 10
            periodSeconds: 15
            successThreshold: 1
            failureThreshold: 12
          terminationMessagePath: /dev/termination-log
          lifecycle:
            preStop:
              exec:
                command:
                  - /bin/bash
                  - '-c'
                  - sleep 20
          name: juno
          livenessProbe:
            httpGet:
              path: /juno/actuator/health/liveness
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 10
            periodSeconds: 15
            successThreshold: 1
            failureThreshold: 12
          ports:
            - name: juno
              containerPort: 8080
              protocol: TCP
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: juno-data
              mountPath: /opt/juno/
            - name: tomcat-configmap-volume
              mountPath: /usr/local/tomcat/scripts/initialize_instance.rb
              subPath: initialize_instance.rb
            - name: tomcat-configmap-volume
              mountPath: /opt/app-root/src/.my.cnf
              subPath: .my.cnf
            - name: tomcat-configmap-volume
              mountPath: /opt/app-root/src/.bashrc
              subPath: .bashrc
            - name: tomcat-configmap-volume
              mountPath: /opt/app-root/src/properties/logback.xml
              subPath: logback.xml
            - name: tomcat-configmap-volume
              mountPath: /opt/app-root/src/properties/additional-properties.yml
              subPath: additional-properties.yml
          terminationMessagePolicy: File
          image: juno
      volumes:
        - name: juno-data
          persistentVolumeClaim:
            claimName: tomcat
        - name: tomcat-configmap-volume
          configMap:
            name: tomcat
            defaultMode: 493
