openshift/manifests/tomcat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat 
  namespace: juno
spec:
  ports:
    - name: tomcat
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    name: tomcat
